<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ScoreBillJones</artifactId>
        <groupId>score-bill-jones</groupId>
        <version>2.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>scorebj.app</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>score-bill-jones</groupId>
            <artifactId>scorebj.gui</artifactId>
            <version>2.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>score-bill-jones</groupId>
            <artifactId>scorebj.util</artifactId>
            <version>2.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>score-bill-jones</groupId>
            <artifactId>scorebj.jre</artifactId>
            <version>2.1-SNAPSHOT</version>
            <classifier>jre</classifier>
            <type>zip</type>
        </dependency>
    </dependencies>
    <build>
    <plugins>
        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
                <execution>
                    <id>super-jar</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <!--descriptor>.\uber-jar.xml</descriptor-->
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <archive>
                    <manifest>
                        <main-class>
                            scorebj.gui.ScoringForm
                        </main-class>
                    </manifest>
                    <manifestEntries>
                        <Multi-Release>true</Multi-Release>
                    </manifestEntries>
                </archive>
            </configuration>
        </plugin>
        <plugin>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <version>2.1.2</version>
            <executions>
                <execution>
                    <id>l4j-gui</id>
                    <phase>package</phase>
                    <goals><goal>launch4j</goal></goals>
                    <configuration>
                        <headerType>gui</headerType>
                        <outfile>target/ScoreBillJones.exe</outfile>
                        <jar>target/scorebj.app-${project.version}-jar-with-dependencies.jar</jar>
                        <errTitle>ScoreBillJones - Error</errTitle>
                        <classPath>
                            <mainClass>scorebj.gui.ScoringForm</mainClass>
                            <addDependencies>true</addDependencies>
                            <preCp>lib/</preCp>
                        </classPath>
                        <dontWrapJar>false</dontWrapJar>
                        <cmdLine/>
                        <chdir>.</chdir>
                        <priority>normal</priority>
                        <downloadUrl>http://java.com/download</downloadUrl>
                        <supportUrl/>
                        <stayAlive>true</stayAlive>
                        <restartOnCrash>true</restartOnCrash>
                        <manifest>${project.basedir}/ScoreBillJones.exe.manifest</manifest>
                        <icon>${project.basedir}/Google-Noto-Emoji-Activities-52775-club-suit.ico</icon>
                        <jre>
                            <path>${project.basedir}/../scorebj.jre/target/maven-jlink/classifiers/jre</path>
                            <bundledJre64Bit>true</bundledJre64Bit>
                            <bundledJreAsFallback>false</bundledJreAsFallback>
                            <minVersion>12</minVersion>
                            <maxVersion>17</maxVersion>
                            <jdkPreference>preferJre</jdkPreference>
                            <runtimeBits>64/32</runtimeBits>
                            <initialHeapPercent>10</initialHeapPercent>
                            <maxHeapPercent>50</maxHeapPercent>
                            <opts>
                                <opt>-Dlaunch4j.exedir=%EXEDIR% --add-opens java.base/java.io=ALL-UNNAMED</opt>
                            </opts>
                        </jre>
                        <versionInfo>
                            <fileVersion>2.1.0.0</fileVersion>
                            <txtFileVersion>2.1.0.0</txtFileVersion>
                            <fileDescription>Score Bill Jones</fileDescription>
                            <copyright>Alan Curran</copyright>
                            <productVersion>2.1.0.0</productVersion>
                            <txtProductVersion>2.1.0.0</txtProductVersion>
                            <productName>ScoreBillJones</productName>
                            <companyName/>
                            <internalName>ScoreBillJones</internalName>
                            <originalFilename>ScoreBillJones.exe</originalFilename>
                            <trademarks/>
                            <language>ENGLISH_UK</language>
                        </versionInfo>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
    </build>
</project>